# jobvault

./: .env.example  .firebaserc  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  OSS_PLAN.md  README.md  SECURITY.md  desktop-app-plan.md  docker-compose.yml  drizzle.config.ts  eslint.config.js  firestore.rules  index.html  package.json  tsconfig.app.json  tsconfig.server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: desktop-release.yml  docker-publish.yml
api/: extract.ts  tsconfig.json
api/_lib/: allowlist.ts  db.ts  firebaseAdmin.ts  handlers.test.ts  http.ts  oauthGoogle.ts  requireAllowedUser.ts  requireUser.ts  session.ts  testHelpers.ts  validation.ts
api/applications/: [id].ts  index.ts
api/auth/: callback.ts  login.ts  logout.ts  me.ts
api/pending/: [id].ts  index.ts
docs/: AI_PROVIDERS.md  CONFIGURATION.md  SELF_HOSTING.md
docs/screenshots/: README.md
scripts/: build-server-bundle.ts  migrate-from-firebase.ts  prepare-tauri-sidecar.ts  smoke-adapter.ts  smoke-api.sh
scripts/legacy/: migrate-from-firebase.ts
server/: index.ts
server/lib/: aiConfig.ts  aiProviders.ts  bootstrap.test.ts  bootstrap.ts  db.ts  password.test.ts  password.ts  passwordPolicy.test.ts  passwordPolicy.ts  session.ts  testHelpers.ts  users.test.ts  users.ts  validation.ts
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+46 files in other folders)
