[package]
name = "jobvault-desktop"
version = "0.3.1"
description = "Jobvault desktop shell"
authors = ["Jobvault contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "jobvault_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portpicker = "0.1"
rand = "0.8"
ureq = { version = "2", default-features = false, features = ["tls"] }
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
